--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
+  iconsax: ^0.0.8
 
 dev_dependencies:
   build_runner: ^2.4.8
