--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,21 +32,21 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.10
+  freezed_annotation: ^2.4.1
   gap: ^3.0.1
   go_router: ^13.2.0
-  freezed_annotation: ^2.4.1
-  hooks_riverpod: ^2.4.10
-  riverpod_annotation: ^2.3.4
   iconsax: ^0.0.8
+  riverpod_annotation: ^2.3.4
 
 dev_dependencies:
   build_runner: ^2.4.8
-  riverpod_generator: ^2.3.11
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.4.7
   json_serializable: ^6.7.1
+  riverpod_generator: ^2.3.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,8 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/banners/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
