--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
+  dio: ^5.4.1
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.10
@@ -37,7 +38,9 @@ dependencies:
   gap: ^3.0.1
   go_router: ^13.2.0
   iconsax: ^0.0.8
+  logger: ^2.0.2+1
   riverpod_annotation: ^2.3.4
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   build_runner: ^2.4.8
