--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   gap: ^3.0.1
   go_router: ^13.2.0
   iconsax: ^0.0.8
+  json_annotation: ^4.8.1
   logger: ^2.0.2+1
   riverpod_annotation: ^2.3.4
-  json_annotation: ^4.8.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.8
